# simple_impl

./: Cargo.toml  readme.md
src/: lib.rs
src/macros/: mod.rs
