[package]
name = "simple_impl"
version = "0.1.2"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "macros to make impls ergonomic, dense, and manageable"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/simple_impl"
readme = "readme.md"

[dependencies]
