[package]
name = "simple_impl"
version = "0.1.5"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "macros to make impls ergonomic, dense, and manageable"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/simple_impl"
readme = "readme.md"

[features]
default = []
derive = ["dep:simple_impl_derive"]

[dependencies]
simple_impl_derive = { version = "0.1.0", optional = true }